<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextRegEmail"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:height="48dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegUsername"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:height="48dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/passwords"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextRegconfirmPassword"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:height="48dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="62dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="55dp"
        android:text="@string/farmbetterss"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="visible"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="128dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextRegUsername"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:height="48dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/usernames"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="302dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/btn_bg"
        android:text="@string/register"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegconfirmPassword" />

    <TextView
        android:id="@+id/textViewExistingUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>