<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvbaselabel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soil"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:height="48dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginUsername"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="62dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="55dp"
        android:text="@string/farmbetter2"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="visible"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login1"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextLoginUsername"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="15dp"
        android:height="48dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="100dp"
        android:text="@string/register_for_new_users"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>